--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 
-build/
+# Xcode
+.DS_Store
+*/build/*
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -10,9 +12,19 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
-*.xccheckout
+profile
 *.moved-aside
 DerivedData
-*.xcuserstate
-# Pods - for those of you who use CocoaPods
+.idea/
+*.hmap
+*.xccheckout
+*.xcworkspace
+!default.xcworkspace
+
+#CocoaPods
 Pods
+!Podfile
+!Podfile.lock
+
+
+
